--- a/package.json
+++ b/package.json
@@ -1,3 +1,14 @@
-"scripts": {
-  "start": "node server.js"
+{
+  "name": "cors-proxy",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "access-control": "^1.0.0",
+    "fs-promise": "^2.0.3",
+    "marked-promise": "^2.0.0",
+    "promisepipe": "^2.0.0"
+  }
 }
