--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "start": "node server.js"
   },
+  "files": [
+    "index.js",
+    "readme.md"
+  ],
   "dependencies": {
     "access-control": "^1.0.0",
     "fs-promise": "^2.0.3",
@@ -12,3 +16,4 @@
     "promisepipe": "^2.0.0"
   }
 }
+
